--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,20 +138,17 @@ p { line-height: 1.5; }
   Header styling starts here
 =================================*/
 
+header { position: relative; }
+
 header .wrapper {
   width: 100%;
   height: 100vh;
-  overflow: hidden;
-  position: relative;
   border-bottom: 10px solid var(--clr-blue2);
-}
-
-.header-bg,
-.header-bg img {
-  height: 100%;
-  position: relative;
-  object-fit: cover;
-  object-position: center;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
 }
 
 .logo {
@@ -174,15 +171,17 @@ nav {
   transition: all .3s;
 }
 
+nav.active { left: 0; }
+
 nav ul {
   width: 100%;
   height: 100%;
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 15px;
-  position: relative;
 }
 
 nav li a {
@@ -207,7 +206,7 @@ nav li a.active {
   cursor: pointer;
 } 
 
-.menu-toggle .bar {
+.bar {
   width: 100%;
   height: 4px;
   border-radius: 3px;
@@ -218,23 +217,21 @@ nav li a.active {
   transition: all .3s;
 }
 
-.menu-toggle .bar-top {
+.bar-top {
   top: 0;
   box-shadow: 0 13px 0 var(--clr-blue1);
 }
 
-.menu-toggle .bar-bottom { bottom: 0; }
+.bar-bottom { bottom: 0; }
 
-.menu-toggle:hover .bar-top {
+.bar-top.active {
   box-shadow: none;
   transform: translateY(13px) rotate(45deg);
 }
 
-.menu-toggle:hover .bar-bottom {
+.bar-bottom.active {
   transform: translateY(-13px) rotate(-45deg);
 }
-
-.menu-toggle:hover ~ nav { left: 0; }
 
 /*=================================
   Header styling ends here
@@ -243,6 +240,24 @@ nav li a.active {
 /*=================================
   main styling starts here
 =================================*/
+
+/* banner section starts here */
+
+.banner .wrapper {
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+}
+
+.header-bg,
+.header-bg img {
+  height: 100%;
+  position: relative;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* banner section ends here */
 
 /* bookstore section starts here */
 
@@ -488,6 +503,12 @@ footer p {
 
   /* header section ends here */
 
+  /* banner section starts here */
+  
+  .banner .wrapper { height: 475px; }
+  
+  /* banner section ends here */
+
   /* bookstore section starts here */
 
   .bookstore .wrapper { padding: 77px 5% 67px; }
@@ -546,9 +567,19 @@ footer p {
 
   /* header section starts here */
 
-  header .wrapper { width: 81%; }
+  header .wrapper {
+    width: 81%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
   /* header section ends here */
+
+  /* banner section starts here */
+
+  .banner .wrapper { width: 81%; }
+
+  /* banner section ends here */
 
   /* bookstore section starts here */
 
